Initial test updates